fixed grid button stretched

--- a/Project_nexter/starter/sass/_header.scss
+++ b/Project_nexter/starter/sass/_header.scss
@@ -2,4 +2,30 @@
     background-color: $color-grey-dark-1;
     //ends after the 6th coloum so col-end 6
     grid-column: full-start/ col-end 6;
+
+    background-image: linear-gradient(rgba($color-secondary, 0.93), rgba($color-secondary, 0.93)), url(../img/hero.jpeg);
+    background-size: cover;
+    background-position: center;
+
+    display: grid;
+    grid-template-rows: 1fr min-content 6rem 1fr;
+    grid-row-gap: 1.5rem;
+
+    &__logo {
+        height: 3rem;
+    }
+
+    &__btn {
+        align-self: start;
+        justify-self: start;
+    }
+
+    &__seenon-text {
+    }
+
+    &__seenon-logos {
+        img {
+            height: 2.5rem;
+        }
+    }
 }
